--- a/app/package.json
+++ b/app/package.json
@@ -26,7 +26,7 @@
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-input-mask": "^2.0.4",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.3"
   },
   "devDependencies": {
     "@firebase/testing": "^0.20.7",
